# f-core

./: .gitignore  README  README.md  README.txt  pyproject.toml  requirements.txt
.github/: CODEOWNERS
doc/: sys.md  user.md
draft/: futils.md
f_core/: __init__.py  main.py
f_core/mods/: func_.py  glob_.py  type_.py
f_core/mods/glob/: is_.py  main_.py  sub_.py
f_core/mods/op/: func_.py  main_.py  op_.py  other_.py  prod_.py
f_core/mods/spec/: bool_.py  func_.py  gen_.py  helper_.py  main_.py  test_.py  type.py  type_.py
f_core/mods/type/: func_.py  helper_.py  main_.py  op_.py  struc_.py  type_.py
futils/: __init__.py
futils.egg-info/: PKG-INFO  SOURCES.txt
futils/core/: __init__.py  ansi.py  cmd.py  comp.py  core.py  date.py  func.py  iter.py  logs.py  op.py  ty.py  type.py
futils/core/mods/: ansi.py  cmd.py  func.py  hash.py  logs.py
futils/libs/: doc_.py  json_.py
futils/mods/: cli_.py  http.py  http_.py  json.py  json_.py  path.py  path_.py  re.py  re_.py  sub.py  sub_.py  sys.py  sys_.py
sh/: tag
