[tool.poetry]
name = "futils"
version = "0.0.18"
description = "Functional-based utils for Python following a constructivist approach."
authors = ["Yuri Ximenes <yxm.dev@gmx.ie>", "Rafael David <rafaeldvid42@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "futils" }
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



